[gd_scene load_steps=4 format=3 uid="uid://b6e4nonc2cjix"]

[ext_resource type="Script" path="res://controls/settings/SlideSetting.gd" id="1_oh4wn"]
[ext_resource type="Texture2D" uid="uid://dgtw47rne81qs" path="res://icons/speaker-off.png" id="2_c30i7"]
[ext_resource type="Texture2D" uid="uid://gcj4ngse3o47" path="res://icons/speaker.png" id="3_rrmrd"]

[node name="AudioSetting" type="VBoxContainer" node_paths=PackedStringArray("label")]
size_flags_vertical = 8
script = ExtResource("1_oh4wn")
label = NodePath("MarginContainer/VBoxContainer/Label")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "AUDIO LEVEL"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Icon_Off" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_c30i7")
expand_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(220, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.05

[node name="Icon_Full" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_rrmrd")
expand_mode = 4

[connection signal="drag_ended" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HSlider" to="." method="_on_h_slider_drag_ended"]
